@@ -1,6 +1,10 @@
 # ChangeLog for media-video/nvidia-kernel
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/nvidia-kernel/ChangeLog,v 1.138 2006/05/23 15:57:42 augustus Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/nvidia-kernel/ChangeLog,v 1.139 2006/06/27 18:04:52 azarah Exp $
+
+  27 Jun 2006; Martin Schlemmer <azarah@gentoo.org>
+  nvidia-kernel-1.0.8762.ebuild:
+  Fix building on post 2.6.17 kernels.
 
 *nvidia-kernel-1.0.8762 (23 May 2006)
 
